--- a/versions.gradle
+++ b/versions.gradle
@@ -1,6 +1,9 @@
 ext {
   appcompat_version = '28.0.0'
   constraintlayout_version = '1.1.3'
+  retrofit_version = '2.5.0'
+  rx_version = '2.2.4'
+  rxandroid_version = '2.1.0'
 
   junit_version = '4.12'
   testrunner_version = '1.0.2'
