--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,14 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
 
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
     implementation "io.reactivex.rxjava2:rxjava:$rx_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
 
     testImplementation "junit:junit:$junit_version"
+    testImplementation("com.squareup.okhttp3:mockwebserver:$okhttp_version")
+
     androidTestImplementation "com.android.support.test:runner:$testrunner_version"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
 
