--- a/versions.gradle
+++ b/versions.gradle
@@ -4,6 +4,7 @@ ext {
   retrofit_version = '2.5.0'
   rx_version = '2.2.4'
   rxandroid_version = '2.1.0'
+  okhttp_version = '3.12.0'
 
   junit_version = '4.12'
   testrunner_version = '1.0.2'
