--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ language: android
 env:
   global:
     - ANDROID_API_LEVEL=28
+    - ANDROID_EMULATOR_LEVEL=25
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ADB_INSTALL_TIMEOUT=20
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - QEMU_AUDIO_DRV=none
 
 android:
   components:
@@ -11,15 +16,31 @@ android:
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
+    - android-$ANDROID_EMULATOR_LEVEL
 
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-android-support
+
+    - sys-img-$ANDROID_ABI-$ANDROID_TAG-$ANDROID_EMULATOR_LEVEL
+
+cache:
+  directories:
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
+  - "$HOME/.android/build-cache"
 
 licenses:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
     - 'android-sdk-preview-license-.+'
 
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
-  ./gradlew build check
+  ./gradlew clean build connectedCheck --stacktrace
