--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: android
 env:
   global:
     - ANDROID_API_LEVEL=28
-    - ANDROID_EMULATOR_LEVEL=25
+    - ANDROID_EMULATOR_LEVEL=24
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ADB_INSTALL_TIMEOUT=20
     - ANDROID_ABI=armeabi-v7a
@@ -22,7 +22,11 @@ android:
     - extra-android-m2repository
     - extra-android-support
 
-    - sys-img-$ANDROID_ABI-$ANDROID_TAG-$ANDROID_EMULATOR_LEVEL
+    - sys-img-$ANDROID_ABI-android-$ANDROID_EMULATOR_LEVEL
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
@@ -37,8 +41,8 @@ licenses:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-window &
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-window &
   - travis_wait android-wait-for-emulator
   - adb shell input keyevent 82 &
 
