--- a/versions.gradle
+++ b/versions.gradle
@@ -1,12 +1,13 @@
 ext {
-  appcompat_version = '28.0.0'
-  constraintlayout_version = '1.1.3'
+  appcompat_version = '1.1.0-alpha01'
+  constraintlayout_version = '2.0.0-alpha3'
   retrofit_version = '2.5.0'
   rx_version = '2.2.4'
   rxandroid_version = '2.1.0'
   okhttp_version = '3.12.0'
+  room_version = '2.1.0-alpha03'
 
   junit_version = '4.12'
-  testrunner_version = '1.0.2'
-  espresso_version = '3.0.2'
+  testrunner_version = '1.1.1'
+  espresso_version = '3.1.1'
 }
