--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply from: '../jacoco.gradle'
 
 def apiProperties = new Properties()
@@ -62,7 +63,7 @@ dependencies {
     testImplementation("com.squareup.okhttp3:mockwebserver:$okhttp_version")
     testImplementation "androidx.room:room-testing:$room_version"
 
-    androidTestImplementation "androidx.test:runner:$testrunner_version"
+    androidTestImplementation "androidx.test.ext:junit:$testrunner_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
 }
